A little validation added

--- a/ticket-system-web/src/main/webapp/resources/css/bootstrap.css
+++ b/ticket-system-web/src/main/webapp/resources/css/bootstrap.css
@@ -6208,6 +6208,9 @@ button.close {
 #push,#footer {
     height: 60px;
 }
+.mg {
+    margin: 10px;
+}
 
 
 /*# sourceMappingURL=bootstrap.css.map */
